--- a/chapter1.tex
+++ b/chapter1.tex
@@ -612,7 +612,7 @@ $\overline{B} = A$.
 在此我们要给出的“事件域”概念,
 目的是为下一节定义事件的概率作准备.
 
-所谓的“事件域”从直观上讲就是一个样本空间中某些子集组成的集合类,
+所谓的“事件域”从直观上讲就是一个样本空间中某些子集及其运算（并、 交、差、对立）结果而组成的集合类,
 以后记事件域为 $\mathscr{F}$.
 
 当样本空间是实数轴上的一个区间时,
